--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -41,7 +41,7 @@
   "blocks": [
     {
       "type": "cta",
-      "name": "Кнопка",
+      "name": "Button",
       "settings": [
         { "type": "text", "id": "label", "label": "Текст", "default": "SHOP ALL PRODUCTS" },
         { "type": "url",  "id": "link",  "label": "Ссылка", "default": "/" }
