fixed footer link in layout but needs styling fixes. product page changed slightly with grey htag now

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -18,7 +18,6 @@
   </head>
 
   <body>
-    {% sections 'header-group' %}
 
     {{ content_for_layout }}
     {% section 'hero-banner' %}
@@ -29,7 +28,6 @@
 
     {% section 'newsletter-signup' %}
 
-
-    {% sections 'footer-group' %}
+    {% section 'footer' %}
   </body>
 </html>
