--- a/assets/critical.css
+++ b/assets/critical.css
@@ -4,6 +4,7 @@
 * {
   box-sizing: border-box;
   margin: 0;
+  padding: 0;
 }
 :root {
   --green: #1c4219;
@@ -46,13 +47,13 @@ select {
 }
 
 select {
-  background-color: var(--color-background);
-  color: currentcolor;
+  background-color: var(--white);
+  color: var(--blue);
 }
 
 dialog {
-  background-color: var(--color-background);
-  color: var(--color-foreground);
+  background-color: var(--white);
+  color: var(--blue);
 }
 h1,
 h2,
