--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -20,14 +20,15 @@
   <body>
 
     {{ content_for_layout }}
-    {% section 'hero-banner' %}
+    {% section 'hero-banner'  %}
     
     {% section 'featured-products' %}
 
-    {% section 'about-section' %}
+    {% section 'about-section'
+     %}
 
     {% section 'newsletter-signup' %}
 
-    {% section 'footer' %}
+    {% section 'footer'  %}
   </body>
 </html>
